fixing overflow-x

--- a/frontend/src/components/body/profile/Profile.css
+++ b/frontend/src/components/body/profile/Profile.css
@@ -2,7 +2,7 @@
     display: grid;
     grid-template-columns: 1fr 1fr;
     width: 100%;
-    max-width: 100vw;
+    max-width: 100%;
     overflow-x: hidden;
     gap: 1rem;
     padding: 1rem;
