--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -10,7 +10,8 @@
 html,
 body {
   height: 100%;
-  overflow: auto;
+  overflow-x: hidden;
+  overflow-y: auto;
   background-color: #212529;
   width: 100%;
 }
